<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="anonymous">Anonymous</string>
    
    <string name="resetPassword">Reset Password</string>
    <string name="reset_msg">Password reset email will be sent to you shortly.</string>
</resources>
